objects/UserParameter__c.object
<CustomObject>
    <fields>
        <fullName>Competitor10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor 10</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Competitor__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>User Parameters (Competitor 10)</relationshipLabel>
        <relationshipName>User_Parameters9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Competitor__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>User Parameters (Competitor 2)</relationshipLabel>
        <relationshipName>User_Parameters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Competitor__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>User Parameters (Competitor 3)</relationshipLabel>
        <relationshipName>User_Parameters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEAdvantageProposalCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SE Advantage Proposal Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPASalesGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPA Sales Group</label>
        <referenceTo>SPASalesGroup__c</referenceTo>
        <relationshipLabel>User Parameters</relationshipLabel>
        <relationshipName>User_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueUserParameter__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique field to verify user can have only one user parameter record.</description>
        <label>TECH_UniqueUserParameter</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Parameter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>SPASalesGroup__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>contains</operation>
            <value>SGD</value>
        </filters>
        <label>Singapore User</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UP - {0000}</displayFormat>
        <label>User Parameter Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>